# chess_master_9001

./: .gitignore  CLAUDE.md  pyproject.toml
Docs/: model_proposition.md
configs/: base.yaml  debug.yaml  phase_a.yaml  phase_a_small.yaml  phase_b.yaml
data/: README.md
scripts/: generate_data.py  inspect_model.py  play_game.py  probe.py  split_data.py  train.py
src/chess_master/: config.py  model.py  types.py
src/chess_master/board/: moves.py  tensor.py  utils.py
src/chess_master/data/: dataset.py  pipeline.py  stockfish.py
src/chess_master/encoder/: backbone.py  projections.py  short_term.py
src/chess_master/eval/: ablations.py  accuracy.py  self_play.py
src/chess_master/heads/: confidence.py  opponent.py  policy.py  value.py
src/chess_master/inference/: player.py  session.py
src/chess_master/memory/: curation.py  hopfield.py  store.py
src/chess_master/merger/: heuristic.py  learned.py
src/chess_master/planner/: __init__.py  projection.py  two_ply.py
src/chess_master/training/: callbacks.py  losses.py  trainer.py
src/chess_master/web/: app.py
src/chess_master/web/templates/: index.html
tests/: conftest.py
tests/integration/: test_forward_pass.py  test_opponent_prediction.py  test_phase_d.py  test_planner_integration.py  test_training_step.py
tests/unit/: test_board_tensor.py  test_confidence_head.py  test_encoder.py  test_hopfield.py  test_losses.py  test_memory_store.py  test_merger.py  test_moves.py  test_opponent_head.py  test_policy_head.py  test_projection.py  test_two_ply.py  test_value_head.py
(+2 files in other folders)
